--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <input type="button" value="start" onclick=start()>
+    <br>
+    <div id="score1"></div>
+    <div id="score2"></div>
     <div class="grid">
          
     </div>
